# suffete

./: .gitattributes  .gitignore  .rustfmt.toml  .typos.toml  404.html  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE-MIT  README.md  SECURITY.md  contributing.html  flake.nix  index.html  print.html  searchindex.js  searchindex.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: book.yml  ci.yml  codspeed.yml  commit-authorship.yml  triage.yml
api/: cast-compatibility.html  construction.html  expand.html  handles.html  inspect.html  predicates.html  serialize.html  transform.html  world.html
benches/: builder.rs  cast.rs  compatibility.rs  compute.rs  element.rs  expand.rs  hierarchy.rs  id.rs  inspect.rs  interner.rs  join.rs  lattice.rs  meet.rs  predicates.rs  serialize.rs  subtract.rs  template.rs  transform.rs  ty.rs  widen.rs  workload_expand_resolve.rs  workload_intern_churn.rs  workload_join_bulk.rs  workload_lattice_storm.rs  workload_narrow_funnel.rs  workload_template_walk.rs
benches/common/: mod.rs
book/: book.toml
book/src/: SUMMARY.md  contributing.md  introduction.md
book/src/api/: cast-compatibility.md  construction.md  expand.md  handles.md  inspect.md  predicates.md  serialize.md  transform.md  world.md
book/src/cookbook/: find-classes.md  generic-instance.md  instanceof-narrow.md  subtype-question.md  union.md
book/src/foundations/: glossary.md  quick-tour.md  what-is-suffete.md  why.md
book/src/generics/: specialise.md  standin.md  substitute.md  templates.md  variance.md
book/src/internals/: element-id-layout.md  interner.md  performance.md  simd.md
book/src/lattice/: join.md  laws.md  meet.md  narrow.md  overlaps.md  refines.md  subtract.md
book/src/reference/: element-kinds.md  options-reports.md  prelude.md
book/src/universe/: arrays.md  class-like-string.md  elements.md  iterables-callables.md  objects.md  refinements.md  resources.md  scalars.md  special.md  templates.md  unresolved.md  wrappers.md
book/theme/: custom.css
cookbook/: find-classes.html  generic-instance.html  instanceof-narrow.html  subtype-question.html  union.html
foundations/: glossary.html  quick-tour.html  what-is-suffete.html  why.html
generics/: specialise.html  standin.html  substitute.html  templates.html  variance.html
internals/: element-id-layout.html  interner.html  performance.html  simd.html
lattice/: join.html  laws.html  meet.html  narrow.html  overlaps.html  refines.html  subtract.html
reference/: element-kinds.html  options-reports.html  prelude.html
scripts/: proptest-hammer.sh
src/: handle.rs  lib.rs  prelude.rs  substitute.rs  typed.rs  well_known.rs
src/builder/: mod.rs
src/cast/: mod.rs
src/combiner/: mod.rs
src/comparator/: codebase.rs  context.rs  mod.rs  subtype.rs
src/compatibility/: mod.rs
src/element/: id.rs  kind.rs  mod.rs  simd.rs  value.rs
src/element/payload/: alias.rs  array.rs  conditional.rs  defining_entity.rs  derived.rs  generic_parameter.rs  intersected.rs  iterable.rs  mixed.rs  mod.rs  negated.rs  reference.rs  resource.rs  variable.rs
src/element/payload/callable/: alias.rs  info.rs  mod.rs  signature.rs
src/element/payload/object/: enumeration.rs  has_method.rs  has_property.rs  mod.rs  named.rs  shape.rs
src/element/payload/scalar/: class_like_string.rs  float.rs  int.rs  mod.rs  string.rs
src/expand/: context.rs  mod.rs
src/hierarchy/: mod.rs
src/inspect/: mod.rs  walk.rs
src/interner/: arena.rs  boot.rs  mod.rs  store.rs
src/join/: mod.rs
src/join/family/: array.rs  float.rs  int.rs  list.rs  mixed.rs  mod.rs  scalar.rs  string.rs
src/lattice/: codebase.rs  context.rs  intersects.rs  mod.rs  options.rs  overlaps.rs  refines.rs  report.rs  sealed.rs
src/lattice/family/: array.rs  array_key.rs  bool.rs  callable.rs  class_like_string.rs  float.rs  generic.rs  int.rs  iterable.rs  mixed.rs  mod.rs  negated.rs  numeric.rs  object.rs  reference.rs  resource.rs  scalar.rs  string.rs
src/meet/: mod.rs
src/meet/family/: array.rs  callable.rs  generic.rs  has_member.rs  int.rs  iterable.rs  mod.rs  object.rs  string.rs
src/predicates/: element.rs  mod.rs
src/serialize/: mod.rs
src/subtract/: mod.rs
src/subtract/family/: array.rs  callable.rs  dominator.rs  generic.rs  has_member.rs  int.rs  iterable.rs  list.rs  mod.rs  object.rs  string.rs
src/template/: mod.rs  reconcile.rs  standin.rs  substitute.rs
src/transform/: mod.rs  walk.rs
src/ty/: flags.rs  id.rs  mod.rs  value.rs
src/widen/: mod.rs
src/world/: mod.rs  template.rs
tests/: algorithmic_gaps.rs  builder_basic.rs  cast_basic.rs  combiner_arrays.rs  combiner_atomic_pairs_explicit.rs  combiner_combinatorial.rs  combiner_floats.rs  combiner_integers.rs  combiner_megatable.rs  combiner_mixed.rs  combiner_null_void_never.rs  combiner_objects.rs  combiner_options.rs  combiner_pairs.rs  combiner_property_idempotence.rs  combiner_resources.rs  combiner_scalars.rs  combiner_smoke.rs  combiner_strings.rs  combiner_table_cases.rs  combiner_thresholds.rs  combiner_triples.rs  combiner_void_value_context.rs  comparator_arrays.rs  comparator_booleans.rs  comparator_callable.rs  comparator_callable_signatures.rs  comparator_class_strings.rs  comparator_combinatorial.rs  comparator_deep_structures.rs  comparator_enum_structural.rs  comparator_flags.rs  comparator_floats.rs  comparator_generic_parameters.rs  comparator_generics.rs  comparator_indirection.rs  comparator_integers.rs  comparator_intersects.rs  comparator_iterable.rs  comparator_mixed.rs  (+42 more)
tests/combiner_common/: mod.rs
tests/comparator_common/: mod.rs
theme/: mathjax.js
type-system/: README.md  combination.md  comparison.md  generics.md  intersection.md  types.md
universe/: arrays.html  class-like-string.html  elements.html  iterables-callables.html  objects.html  refinements.html  resources.html  scalars.html  special.html  templates.html  unresolved.html  wrappers.html
