[package]
name = "suffete"
version = "0.1.0"
edition = "2024"
authors = ["Seifeddine Gmati <azjezz@carthage.software>"]
license = "MIT OR Apache-2.0"
description = "A standalone PHP type system: representation, comparison, and type checking primitives for static analysis tools."
homepage = "https://github.com/carthage-software/suffete"
repository = "https://github.com/carthage-software/suffete"
rust-version = "1.95.0"
readme = "README.md"
keywords = ["php", "type-system", "type-checker", "static-analysis"]
categories = ["development-tools", "compilers"]

[lints.clippy]
large_enum_variant = { level = "forbid" }
print_stdout = { level = "forbid" }
print_stderr = { level = "forbid" }
dbg_macro = { level = "forbid" }
let_underscore_lock = { level = "forbid" }

[features]
default = []
serde = ["dep:serde"]

[dependencies]
mago-atom = "1.24"
mago-span = "1.24"
ordered-float = { version = "5.0", default-features = false }
boxcar = "0.2"
dashmap = "6"
serde = { version = "1", features = ["derive"], optional = true }

[[bench]]
name = "id"
harness = false

[profile.release]
opt-level = 3
debug = false
strip = 'symbols'
debug-assertions = false
overflow-checks = false
lto = 'fat'
panic = 'abort'
incremental = false
codegen-units = 1
rpath = true

[profile.memory-debug]
inherits = 'release'
debug = true
strip = 'none'

[profile.dev]
debug = 'full'
opt-level = 0
lto = 'off'
panic = 'unwind'

[dev-dependencies]
criterion = { version = "4.5.0", package = "codspeed-criterion-compat" }
proptest = "1"
serde_json = "1"
